# challenge-neueralworks

./: .gitignore  Dockerfile  README.md  pyproject.toml
.actions/: api-deploy.yml
.github/workflows/: api-deploy.yml  test-1.yml
challenge_neueralworks/src/: lambda_handler.py
challenge_neueralworks/src/models/: model.py
challenge_neueralworks/src/models/delay/: delay.py  inference.py
challenge_neueralworks/src/pipeline/: preprocesing.py
docs/: infra.md  stress_test.md  stress_test_report.html
infra/: main.tf  outputs.tf  terraform-cloud.tf
infra/api-gateway/: api_gateway.tf  inference-endpoint.tf  outputs.tf  variables.tf
infra/ecr/: ecr.tf  outputs.tf  variables.tf
infra/lambda/: iam.tf  lambda.tf  outputs.tf  variables.tf
models/delay/: model_v0.joblib  model_v0.pkl
notebooks/: model.ipynb
stress_test/: locustfile.py
