[tool.poetry]
name = "challenge-neueralworks"
version = "0.1.0"
description = "inference api"
authors = ["Diego-II <diego.irarrazaval@ug.uchile.cl>"]
readme = "README.md"
packages = [{include = "challenge_neueralworks"}]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"
dill = "^0.3.6"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
dill = "^0.3.6"
locust = "^2.15.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
